--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "acorn": "^5.7.4",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -31,10 +32,15 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "dns-packet": "^1.3.4",
+    "elliptic": "^6.5.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob-parent": "^5.1.2",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy": "^1.18.1",
+    "lodash": "^4.17.21",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -44,8 +50,12 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
+    "serialize-javascript": "^3.1.0",
     "shelljs": "^0.7.6",
+    "ssri": "^6.0.2",
+    "trim-newlines": "^3.0.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
+    "underscore": "^1.13.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
@@ -53,7 +63,9 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "websocket-extensions": "^0.1.4",
+    "y18n": "^4.0.3"
   },
   "engines": {
     "node": ">= 6.0.0",
