--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "color-string": "^1.6.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "dns-packet": "^1.3.4",
@@ -38,12 +39,16 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob-parent": "^5.1.2",
+    "hosted-git-info": "^2.8.9",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy": "^1.18.1",
+    "is-svg": "^4.3.1",
     "lodash": "^4.17.21",
-    "node-notifier": "^5.1.2",
+    "minimist": "^0.2.1",
+    "node-notifier": "^8.0.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "path-parse": "^1.0.7",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
@@ -52,11 +57,13 @@
     "semver": "^5.3.0",
     "serialize-javascript": "^3.1.0",
     "shelljs": "^0.7.6",
+    "sockjs": "^0.3.21",
     "ssri": "^6.0.2",
     "trim-newlines": "^3.0.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "underscore": "^1.13.1",
     "url-loader": "^0.5.8",
+    "url-parse": "^1.5.3",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
@@ -65,7 +72,9 @@
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
     "websocket-extensions": "^0.1.4",
-    "y18n": "^4.0.3"
+    "ws": "^5.2.3",
+    "y18n": "^4.0.3",
+    "yargs-parser": "^13.1.2"
   },
   "engines": {
     "node": ">= 6.0.0",
